# human_detector_ws

./: .gitignore  README.md  build_human_detector.sh  laptop_human_publisher.py
data_raw/: download_human_data.py  helper_scripts.ipynb
data_training/: data.yaml  train.ipynb  train.py
detection_scripts/: laptop_human_publisher.py  simple_detector.py
raw_data/: helper_scripts.ipynb
scripts/: laptop_human_publisher.py
scripts/coordinate_conversion_scripts/: calibrate_transform.py  demo.py  transformed_coordinate.py
scripts/detection_scripts/: laptop_human_publisher.py  simple_detector.py
src/human_detector/: package.xml  setup.cfg  setup.py
src/human_detector/human_detector/: helper.ipynb  human_detection_node.py  human_detector_rviz.py  human_pose_node.py
src/human_detector/launch/: human_detection.rviz  human_detector_launch.py
src/yolo_ros/: README.md
src/yolo_ros/yolo_bringup/launch/: yolo.launch.py  yolo_3d.rviz  yolov11.launch.py
src/yolo_ros/yolo_ros/: package.xml
src/yolo_ros/yolo_ros/yolo_ros/: tracking_node.py
training_data/: custom_hyp.yaml  data.yaml  train.ipynb  train.py
training_data/raw_data/: ros1bag_to_mp4_convert.ipynb
