<?xml version="1.0"?>
<package format="3">
  <name>human_detector</name>
  <version>0.0.1</version>
  <description>Real-time human pose detection using YOLO &amp; Intel RealSense</description>
  <maintainer email="yogeeswaran99@gmail.com">Yogee</maintainer>
  <license>MIT</license>

  <!-- ament_python buildtool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

